more color changes in video credits

--- a/vid.css
+++ b/vid.css
@@ -7,3 +7,12 @@ padding: 20px;}
     padding: 20px;}
 .sum3 {color: #bf0d3e;
     padding: 20px;}
+
+.cred {background-color: #C4CED3; 
+padding: 20px;}
+
+li {color: #042758;}
+
+h4{color: #042758;}
+
+.credits{color: #042758;}
