--- a/example.css
+++ b/example.css
@@ -1,11 +1,12 @@
 h1{
     color: #777878}
 div { background-color: gold;
-}
+padding: 20px;}
 p {color: goldenrod;
 }
 h2 {color: #777878;}
 h3 { color: #777878;font-style: italic;}
 
 .sum {background-color: black;
+    padding: 20px;
 }
