--- a/vid.css
+++ b/vid.css
@@ -8,7 +8,7 @@ padding: 20px;}
 .sum3 {color: #bf0d3e;
     padding: 20px;}
 
-.cred {background-color: #C4CED3; 
+body {background-color: #C4CED3; 
 padding: 20px;}
 
 li {color: #042758;}
