changed css name and took out padding from vid crdits

--- a/vid.css
+++ b/vid.css
@@ -1,7 +1,6 @@
 .sum {background-color: #041e42;}
 
-p {color: #bf0d3e;
-padding: 20px;}
+p {color: #bf0d3e;}
 
 .sum1 {color: #bf0d3e;
     padding: 20px;}
