--- a/aud.css
+++ b/aud.css
@@ -4,6 +4,7 @@ div { background-color: gold;
 padding: 20px;}
 p {color: goldenrod;
 }
+body {background-color: gold;}
 h2 {color: #777878;}
 h3 { color: #777878;font-style: italic;}
 
