--- a/homestyles.css
+++ b/homestyles.css
@@ -2,3 +2,5 @@ h1{
     color: slategrey; background-color: goldenrod;
     padding: 20px;}
 .intro { font-style: Sans-serif; }
+
+body {background-color: grey;}
